--- a/portfolio-vue/package.json
+++ b/portfolio-vue/package.json
@@ -45,6 +45,8 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.8.4",
+    "puppeteer": "^19.9.0",
+    "puppeteer-core": "^19.9.0",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.14"
   },
