--- a/portfolio-react/.prettierrc
+++ b/portfolio-react/.prettierrc
@@ -1,7 +1,8 @@
 {
     "printWidth": 120,
-    "singleQuote": true,
+    "singleQuote": false,
     "trailingComma": "es5",
+    "useTabs": false,
     "tabWidth": 4,
     "arrowParens": "avoid"
 }
